--- a/locale/ka_GE/locale.po
+++ b/locale/ka_GE/locale.po
@@ -37,7 +37,7 @@ msgstr ""
 "[objectId2] ...\n"
 
 msgid "plugins.importexport.crossref.senderTask.name"
-msgstr "CrossRef-ის ავტომატური რეგისტრაციის ამოცანა"
+msgstr "Crossref-ის ავტომატური რეგისტრაციის ამოცანა"
 
 msgid "plugins.importexport.crossref.action.markRegistered"
 msgstr "აქტიურად მონიშვნა"
@@ -86,19 +86,19 @@ msgstr ""
 
 msgid "plugins.importexport.crossref.settings.form.testMode.description"
 msgstr ""
-"ტექსტური API CrossRef-ის გამოყენება (ტესტირების გარემო) DOI-ის "
+"ტექსტური API Crossref-ის გამოყენება (ტესტირების გარემო) DOI-ის "
 "დეპონირებისათვის. გთხოვთ, არ დაგავიწყდეთ ამ პარამეტრის გათიშვა რეალური "
 "მუშაობისას."
 
 msgid "plugins.importexport.crossref.settings.form.automaticRegistration.description"
 msgstr ""
-"OJS განათავსებს მინიჭებულ DOI-ს ავტომატურად CrossRef-ში. მიაქციეთ ყურადღება, "
+"OJS განათავსებს მინიჭებულ DOI-ს ავტომატურად Crossref-ში. მიაქციეთ ყურადღება, "
 "რომ ამას შესაძლოა დასჭირდეს გარკვეული დრო გამოქვეყნებისა და დამუშავების "
 "შემდეგ (მაგალითად, თქვენი cron-ის პარამეტრების მიხედვით). თქვენ შეგიძლიათ "
 "გადაამოწმოთ ყველა არარეგისტრირებული DOI."
 
 msgid "plugins.importexport.crossref.settings.form.usernameRequired"
-msgstr "გთხოვთ შეიტანოთ მომხმარებლის სახელი, რომელიც მიიღეთ CrossRef-იდან."
+msgstr "გთხოვთ შეიტანოთ მომხმარებლის სახელი, რომელიც მიიღეთ Crossref-იდან."
 
 msgid "plugins.importexport.crossref.settings.form.username"
 msgstr "მომხმარებლის სახელი"
@@ -106,11 +106,11 @@ msgstr "მომხმარებლის სახელი"
 msgid "plugins.importexport.crossref.registrationIntro"
 msgstr ""
 "თუ გსურთ ამ მოდულის გამოყენება ციფრული ობიექტების (DOI) რეგისტრაციისათვის "
-"უშუალოდ CrossRef-ში, ამისათვის საჭირო იქნება მომხმარებლის სახელი და პაროლი ("
+"უშუალოდ Crossref-ში, ამისათვის საჭირო იქნება მომხმარებლის სახელი და პაროლი ("
 "მიღება შესაძლებელია აქ: <a href=\"http://www.crossref.org\" target=\"_blank\""
-">CrossRef</a>). თუ არ გაქვთ მომხმარებლის სახელი და პაროლი, შეგიძლიათ "
-"დააექსპორტოთ CrossRef XML ფორმატში, მაგრამ ვერ შეძლებთ თქვენი DOI-ის "
-"რეგისტრაციას CrossRef-ში OJS-იდან."
+">Crossref</a>). თუ არ გაქვთ მომხმარებლის სახელი და პაროლი, შეგიძლიათ "
+"დააექსპორტოთ Crossref XML ფორმატში, მაგრამ ვერ შეძლებთ თქვენი DOI-ის "
+"რეგისტრაციას Crossref-ში OJS-იდან."
 
 msgid "plugins.importexport.crossref.settings.form.depositorEmailRequired"
 msgstr "გთხოვთ, შეიტანოთ დეპოზიტორის ელფოსტა."
@@ -126,7 +126,7 @@ msgstr "დეპოზიტორის სახელი"
 
 msgid "plugins.importexport.crossref.settings.depositorIntro"
 msgstr ""
-"შემდეგი ინფორმაცია აუცილებელია CrossRef დეპოზიტარიუმში წარმატებით "
+"შემდეგი ინფორმაცია აუცილებელია Crossref დეპოზიტარიუმში წარმატებით "
 "გადასაცემად."
 
 msgid "plugins.importexport.crossref.error.noDOIContentObjects"
@@ -152,7 +152,7 @@ msgid "plugins.importexport.crossref.requirements"
 msgstr "მოთხოვნები"
 
 msgid "plugins.importexport.crossref.description"
-msgstr "აექსპორტებს სტატიის მეტა-მონაცემებს CrossRef XML ფორმატში."
+msgstr "აექსპორტებს სტატიის მეტა-მონაცემებს Crossref XML ფორმატში."
 
 msgid "plugins.importexport.crossref.displayName"
-msgstr "მოდული „CrossRef XML-ის ექსპორტი“"
+msgstr "მოდული „Crossref XML-ის ექსპორტი“"
