--- a/locale/nb_NO/locale.po
+++ b/locale/nb_NO/locale.po
@@ -16,10 +16,10 @@ msgstr ""
 "X-Generator: Weblate 3.9.1\n"
 
 msgid "plugins.importexport.crossref.displayName"
-msgstr "Programtillegg for eksport til CrossRef XML"
+msgstr "Programtillegg for eksport til Crossref XML"
 
 msgid "plugins.importexport.crossref.description"
-msgstr "Eksporter artikkelmetadata i CrossRef XML-format."
+msgstr "Eksporter artikkelmetadata i Crossref XML-format."
 
 msgid "plugins.importexport.crossref.cliUsage"
 msgstr ""
@@ -56,7 +56,7 @@ msgstr ""
 "«{$param}»."
 
 msgid "plugins.importexport.crossref.senderTask.name"
-msgstr "CrossRef automatisk registreringsoppgave"
+msgstr "Crossref automatisk registreringsoppgave"
 
 msgid "plugins.importexport.crossref.action.markRegistered"
 msgstr "Merket aktiv"
@@ -104,18 +104,18 @@ msgstr ""
 
 msgid "plugins.importexport.crossref.settings.form.testMode.description"
 msgstr ""
-"Bruk CrossRef test API (testmiljø) for DOI-deponering. Ikke glem å skru av "
+"Bruk Crossref test API (testmiljø) for DOI-deponering. Ikke glem å skru av "
 "dette valget for produksjonen."
 
 msgid "plugins.importexport.crossref.settings.form.automaticRegistration.description"
 msgstr ""
-"OJS vil deponere tildelt DOI-nummer automatisk til CrossRef. Vær oppmerksom "
+"OJS vil deponere tildelt DOI-nummer automatisk til Crossref. Vær oppmerksom "
 "på at dette kan ta litt tid etter publiseringen til å prosesseres (f.eks. "
 "avhengig av din cronjob-konfigurasjon). Du kan sjekke av for alle "
 "uregistrerte DOI-numre."
 
 msgid "plugins.importexport.crossref.settings.form.usernameRequired"
-msgstr "Vennligst skriv inn brukernavnet du fikk fra CrossRef."
+msgstr "Vennligst skriv inn brukernavnet du fikk fra Crossref."
 
 msgid "plugins.importexport.crossref.settings.form.username"
 msgstr "Brukernavn"
@@ -123,11 +123,11 @@ msgstr "Brukernavn"
 msgid "plugins.importexport.crossref.registrationIntro"
 msgstr ""
 "Hvis du ønsker å bruke dette programtillegget for å registrere \"Digital "
-"Object Identifiers\" (DOI) direkte i CrossRef, trenger du et brukernavn og "
+"Object Identifiers\" (DOI) direkte i Crossref, trenger du et brukernavn og "
 "passord (tilgjengelig fra <a href=\"http://www.crossref.org\" target=\""
-"_blank\">CrossRef</a>) for å gjøre dette. Hvis du ikke har et brukernavn og "
-"passord kan du fortsatt eksportere ved å bruke CrossRefs XML-format, men du "
-"kan ikke registrere DOI-numre til CrossRef via OJS."
+"_blank\">Crossref</a>) for å gjøre dette. Hvis du ikke har et brukernavn og "
+"passord kan du fortsatt eksportere ved å bruke Crossrefs XML-format, men du "
+"kan ikke registrere DOI-numre til Crossref via OJS."
 
 msgid "plugins.importexport.crossref.settings.form.depositorEmailRequired"
 msgstr "Vennligst skriv inn opplasters e-post."
@@ -143,7 +143,7 @@ msgstr "Opplasters navn"
 
 msgid "plugins.importexport.crossref.settings.depositorIntro"
 msgstr ""
-"Det følgende elementet er nødvendig for en vellykket CrossRef-opplasting."
+"Det følgende elementet er nødvendig for en vellykket Crossref-opplasting."
 
 msgid "plugins.importexport.crossref.error.publisherNotConfigured"
 msgstr ""
