--- a/locale/sk_SK/locale.po
+++ b/locale/sk_SK/locale.po
@@ -33,7 +33,7 @@ msgstr ""
 "[objectId2] ...\n"
 
 msgid "plugins.importexport.crossref.senderTask.name"
-msgstr "Úloha automatickej registrácie CrossRef"
+msgstr "Úloha automatickej registrácie Crossref"
 
 msgid "plugins.importexport.crossref.action.markRegistered"
 msgstr "Označiť ako aktívne"
@@ -80,17 +80,17 @@ msgstr ""
 
 msgid "plugins.importexport.crossref.settings.form.testMode.description"
 msgstr ""
-"Použite testovacie rozhranie API CrossRef (skúšobné prostredie) pre vklad "
+"Použite testovacie rozhranie API Crossref (skúšobné prostredie) pre vklad "
 "DOI. Nezabudnite túto možnosť odstrániť pred reálnym používaním časopisu."
 
 msgid "plugins.importexport.crossref.settings.form.automaticRegistration.description"
 msgstr ""
-"OJS uloží priradené DOI automaticky do CrossRef. Upozorňujeme, že to môže "
+"OJS uloží priradené DOI automaticky do Crossref. Upozorňujeme, že to môže "
 "trvať krátku dobu po spracovaní publikácie. Môžete skontrolovať všetky "
 "neregistrované DOI."
 
 msgid "plugins.importexport.crossref.settings.form.usernameRequired"
-msgstr "Vložte, prosím, používateľské meno, ktoré ste dostali od CrossRef."
+msgstr "Vložte, prosím, používateľské meno, ktoré ste dostali od Crossref."
 
 msgid "plugins.importexport.crossref.settings.form.username"
 msgstr "Používateľské meno"
@@ -98,11 +98,11 @@ msgstr "Používateľské meno"
 msgid "plugins.importexport.crossref.registrationIntro"
 msgstr ""
 "Ak chcete tento plugin použiť na registráciu identifikátorov digitálnych "
-"objektov (DOI) priamo s CrossRef, budete potrebovať používateľské meno a "
+"objektov (DOI) priamo s Crossref, budete potrebovať používateľské meno a "
 "heslo (k dispozícii na adrese <a href=\"http://www.crossref.org\" target=\""
-"_blank\"> CrossRef </a>), aby ste tak urobili. Ak nemáte vlastné "
-"používateľské meno a heslo, môžete exportovať do formátu CrossRef XML, ale "
-"nemôžete zaregistrovať svoje DOI v CrossRef priamo z OJS."
+"_blank\"> Crossref </a>), aby ste tak urobili. Ak nemáte vlastné "
+"používateľské meno a heslo, môžete exportovať do formátu Crossref XML, ale "
+"nemôžete zaregistrovať svoje DOI v Crossref priamo z OJS."
 
 msgid "plugins.importexport.crossref.settings.form.depositorEmailRequired"
 msgstr "Vložte, prosím, e-mail vkladajúceho."
@@ -117,7 +117,7 @@ msgid "plugins.importexport.crossref.settings.form.depositorName"
 msgstr "Meno vkladajúceho"
 
 msgid "plugins.importexport.crossref.settings.depositorIntro"
-msgstr "Nasledujúce položky sú potrebné pre úspešné uloženie do CrossRef."
+msgstr "Nasledujúce položky sú potrebné pre úspešné uloženie do Crossref."
 
 msgid "plugins.importexport.crossref.error.noDOIContentObjects"
 msgstr ""
@@ -142,10 +142,10 @@ msgid "plugins.importexport.crossref.requirements"
 msgstr "Požadavky"
 
 msgid "plugins.importexport.crossref.description"
-msgstr "Export metadát článku v XML formáte CrossRef."
+msgstr "Export metadát článku v XML formáte Crossref."
 
 msgid "plugins.importexport.crossref.displayName"
-msgstr "Plugin exportu do XML pre CrossRef"
+msgstr "Plugin exportu do XML pre Crossref"
 
 msgid "plugins.importexport.crossref.settings.form.onlyValidateExport"
 msgstr "Overiť iba export. Nesťahujte súbor."
