--- a/locale/eu_ES/locale.po
+++ b/locale/eu_ES/locale.po
@@ -15,7 +15,7 @@ msgid "plugins.importexport.crossref.displayName"
 msgstr "Crossref XML esportatzeko plugina"
 
 msgid "plugins.importexport.crossref.description"
-msgstr "Artikuluen metadatuak esportatu CrossRef XML formatuan."
+msgstr "Artikuluen metadatuak esportatu Crossref XML formatuan."
 
 msgid "plugins.importexport.crossref.cliUsage"
 msgstr ""
