--- a/locale/fi_FI/locale.po
+++ b/locale/fi_FI/locale.po
@@ -15,12 +15,12 @@ msgstr ""
 "X-Generator: Weblate 3.9.1\n"
 
 msgid "plugins.importexport.crossref.displayName"
-msgstr "CrossRef XML -vientilisäosa"
+msgstr "Crossref XML -vientilisäosa"
 
 msgid "plugins.importexport.crossref.description"
 msgstr ""
-"Vie kuvailutietoja CrossRef-palvelun XML-muodossa  ja rekisteröi DOI-"
-"tunnuksia  CrossRef-rekisteröintipalvelussa."
+"Vie kuvailutietoja Crossref-palvelun XML-muodossa  ja rekisteröi DOI-"
+"tunnuksia  Crossref-rekisteröintipalvelussa."
 
 msgid "plugins.importexport.crossref.requirements"
 msgstr "Vaatimukset"
@@ -38,7 +38,7 @@ msgid "plugins.importexport.crossref.error.noDOIContentObjects"
 msgstr "DOI-tunnisteiden määrittämisessä käytettäviä artikkeleita ei ole valittu DOI-tunnistelisäosassa, joten tässä lisäosassa ei ole talletus- tai vientimahdollisuutta."
 
 msgid "plugins.importexport.crossref.settings.depositorIntro"
-msgstr "Onnistuneeseen CrossRef-talletukseen vaaditaan seuraavat kohteet."
+msgstr "Onnistuneeseen Crossref-talletukseen vaaditaan seuraavat kohteet."
 
 msgid "plugins.importexport.crossref.settings.form.depositorName"
 msgstr "Tallettajan nimi"
@@ -53,20 +53,20 @@ msgid "plugins.importexport.crossref.settings.form.depositorEmailRequired"
 msgstr "Anna tallettajan sähköposti."
 
 msgid "plugins.importexport.crossref.registrationIntro"
-msgstr "Jos haluat käyttää tätä lisäosaa rekisteröidäksesi DOI-tunnisteita (Digital Object Identifier) suoraan CrossRefin kautta, tarvitset siihen käyttäjätunnuksen ja salasanan (saatavana osoitteesta <a href=\"http://www.crossref.org\" target=\"_blank\">CrossRef</a>). Jos sinulla ei ole omaa käyttäjätunnusta ja salasanaa, voit silti viedä tietoja CrossRef XML -muotoon, mutta et voi rekisteröidä DOI-tunnisteitasi CrossRefin kautta OJS-järjestelmästä käsin."
+msgstr "Jos haluat käyttää tätä lisäosaa rekisteröidäksesi DOI-tunnisteita (Digital Object Identifier) suoraan Crossrefin kautta, tarvitset siihen käyttäjätunnuksen ja salasanan (saatavana osoitteesta <a href=\"http://www.crossref.org\" target=\"_blank\">Crossref</a>). Jos sinulla ei ole omaa käyttäjätunnusta ja salasanaa, voit silti viedä tietoja Crossref XML -muotoon, mutta et voi rekisteröidä DOI-tunnisteitasi Crossrefin kautta OJS-järjestelmästä käsin."
 
 msgid "plugins.importexport.crossref.settings.form.username"
 msgstr "Käyttäjätunnus"
 
 msgid "plugins.importexport.crossref.settings.form.usernameRequired"
-msgstr "Anna CrossRef-palvelusta saamasi käyttäjätunnus."
+msgstr "Anna Crossref-palvelusta saamasi käyttäjätunnus."
 
 msgid "plugins.importexport.crossref.settings.form.automaticRegistration.description"
-msgstr "OJS tallettaa määritetyt DOI-tunnisteet automaattisesti CrossRefiin. Huomioithan, että käsittely saattaa kestää hetken julkaisemisen jälkeen. Voit tarkistaa kaikki rekisteröimättömät DOI-tunnisteet."
+msgstr "OJS tallettaa määritetyt DOI-tunnisteet automaattisesti Crossrefiin. Huomioithan, että käsittely saattaa kestää hetken julkaisemisen jälkeen. Voit tarkistaa kaikki rekisteröimättömät DOI-tunnisteet."
 
 msgid "plugins.importexport.crossref.settings.form.testMode.description"
 msgstr ""
-"Käytä CrossRef-palvelun testirajapintaa (testausympäristö) DOI-tunnisteen "
+"Käytä Crossref-palvelun testirajapintaa (testausympäristö) DOI-tunnisteen "
 "rekisteröintiin. Muista poistaa tämä valinta tuotantosivustolla."
 
 msgid "plugins.importexport.crossref.issues.description"
@@ -102,7 +102,7 @@ msgid "plugins.importexport.crossref.action.markRegistered"
 msgstr "Merkitse aktiiviseksi"
 
 msgid "plugins.importexport.crossref.senderTask.name"
-msgstr "CrossRefin automaattinen rekisteröintitehtävä"
+msgstr "Crossrefin automaattinen rekisteröintitehtävä"
 
 msgid "plugins.importexport.crossref.cliUsage"
 msgstr ""
