--- a/locale/fr_FR/locale.po
+++ b/locale/fr_FR/locale.po
@@ -39,7 +39,7 @@ msgstr ""
 "[objectId2] ...\n"
 
 msgid "plugins.importexport.crossref.senderTask.name"
-msgstr "Tâche automatique d'enregistrement CrossRef"
+msgstr "Tâche automatique d'enregistrement Crossref"
 
 msgid "plugins.importexport.crossref.action.markRegistered"
 msgstr "Marqué actif"
@@ -86,12 +86,12 @@ msgstr ""
 
 msgid "plugins.importexport.crossref.settings.form.testMode.description"
 msgstr ""
-"Utiliser l'API test CrossRef (environnement de test) pour le dépôt de DOI. "
+"Utiliser l'API test Crossref (environnement de test) pour le dépôt de DOI. "
 "N'oubliez pas de désactiver option lors du passage en production."
 
 msgid "plugins.importexport.crossref.settings.form.automaticRegistration.description"
 msgstr ""
-"OJS déposera automatiquement les DOI assignés auprès de CrossRef. Veuillez "
+"OJS déposera automatiquement les DOI assignés auprès de Crossref. Veuillez "
 "noter que le traitement peut prendre un peu de temps après la publication ("
 "par exemple, en fonction de votre configuration cronjob). Vous pouvez "
 "vérifier tous les DOI non enregistrés."
@@ -99,7 +99,7 @@ msgstr ""
 msgid "plugins.importexport.crossref.settings.form.usernameRequired"
 msgstr ""
 "Veuillez entrer le nom d'utilisateur ou utilisatrice que vous avez obtenu de "
-"CrossRef."
+"Crossref."
 
 msgid "plugins.importexport.crossref.settings.form.username"
 msgstr "Nom d'utilisateur ou utilisatrice"
@@ -107,12 +107,12 @@ msgstr "Nom d'utilisateur ou utilisatrice"
 msgid "plugins.importexport.crossref.registrationIntro"
 msgstr ""
 "Si vous souhaitez utiliser ce module pour enregistrer des DOI (Digital "
-"Object Identifiers) directement avec CrossRef, vous aurez besoin d'un nom "
+"Object Identifiers) directement avec Crossref, vous aurez besoin d'un nom "
 "d'utilisateur ou d'utilisatrice et d'un mot de passe (disponible sur <a href="
-"\"http://www.crossref.org\" target=\"_blank\"> CrossRef </a>). Si vous "
+"\"http://www.crossref.org\" target=\"_blank\"> Crossref </a>). Si vous "
 "n'avez pas votre propre nom d'utilisateur ou d'utilisatrice et mot de passe, "
-"vous pouvez toujours exporter en format XML CrossRef, mais vous ne pouvez "
-"pas enregistrer vos DOI avec CrossRef à partir d'OJS."
+"vous pouvez toujours exporter en format XML Crossref, mais vous ne pouvez "
+"pas enregistrer vos DOI avec Crossref à partir d'OJS."
 
 msgid "plugins.importexport.crossref.settings.form.depositorEmailRequired"
 msgstr "Veuillez entrer le courriel du déposant."
@@ -127,7 +127,7 @@ msgid "plugins.importexport.crossref.settings.form.depositorName"
 msgstr "Nom du déposant"
 
 msgid "plugins.importexport.crossref.settings.depositorIntro"
-msgstr "Les éléments suivants sont requis pour un dépôt CrossRef réussi."
+msgstr "Les éléments suivants sont requis pour un dépôt Crossref réussi."
 
 msgid "plugins.importexport.crossref.error.noDOIContentObjects"
 msgstr ""
@@ -154,10 +154,10 @@ msgid "plugins.importexport.crossref.requirements"
 msgstr "Exigences"
 
 msgid "plugins.importexport.crossref.description"
-msgstr "Exporter les métadonnées de l'article au format CrossRef XML."
+msgstr "Exporter les métadonnées de l'article au format Crossref XML."
 
 msgid "plugins.importexport.crossref.displayName"
-msgstr "Module d'exportation CrossRef XML"
+msgstr "Module d'exportation Crossref XML"
 
 msgid "plugins.importexport.crossref.settings.form.onlyValidateExport"
 msgstr "Valider uniquement l'exportation. Ne pas télécharger le fichier."
