--- a/locale/ku_IQ/locale.po
+++ b/locale/ku_IQ/locale.po
@@ -24,7 +24,7 @@ msgid "plugins.importexport.crossref.register.error.mdsError"
 msgstr "تۆمارکردنەکە سەرکەوتو نەبو! تۆماری DOI کێشەیەکی تێدایە."
 
 msgid "plugins.importexport.crossref.senderTask.name"
-msgstr "تۆمارکردنی ئۆتۆماتیکی CrossRef"
+msgstr "تۆمارکردنی ئۆتۆماتیکی Crossref"
 
 msgid "plugins.importexport.crossref.action.markRegistered"
 msgstr "چالاکی بکە"
@@ -46,7 +46,7 @@ msgid "plugins.importexport.crossref.status.failed"
 msgstr "سەرکەوتو نەبو"
 
 msgid "plugins.importexport.crossref.settings.form.usernameRequired"
-msgstr "تکایە ناوی بەکارهێنەر کە لە CrossRefەوە پێت گەیشتووە داخل بکە."
+msgstr "تکایە ناوی بەکارهێنەر کە لە Crossrefەوە پێت گەیشتووە داخل بکە."
 
 msgid "plugins.importexport.crossref.settings.form.username"
 msgstr "ناوی بەکارهێنەر"
@@ -64,7 +64,7 @@ msgid "plugins.importexport.crossref.settings.form.depositorName"
 msgstr "ناوی پارەدەر"
 
 msgid "plugins.importexport.crossref.settings.depositorIntro"
-msgstr "ئەم دانانەی خوارەوە بۆ CrossRefێکی سەرکەوتو داواکراون."
+msgstr "ئەم دانانەی خوارەوە بۆ Crossrefێکی سەرکەوتو داواکراون."
 
 msgid "plugins.importexport.crossref.error.noDOIContentObjects"
 msgstr ""
@@ -90,10 +90,10 @@ msgid "plugins.importexport.crossref.requirements"
 msgstr "پێویستییەکان"
 
 msgid "plugins.importexport.crossref.description"
-msgstr "هەناردەکردنی زانیاریی ناسێنەر بۆ ڕێکخستنی CrossRef XML."
+msgstr "هەناردەکردنی زانیاریی ناسێنەر بۆ ڕێکخستنی Crossref XML."
 
 msgid "plugins.importexport.crossref.displayName"
-msgstr "هەناردەکردنی گرێدانی CrossRef  بۆ فایلەکانی XML"
+msgstr "هەناردەکردنی گرێدانی Crossref  بۆ فایلەکانی XML"
 
 msgid "plugins.importexport.crossref.cliUsage"
 msgstr ""
@@ -129,19 +129,19 @@ msgstr ""
 
 msgid "plugins.importexport.crossref.settings.form.testMode.description"
 msgstr ""
-"شێوازی تایبەتی CrossRef  بۆ پێدانی پێشوەختەی DOI بەکار بهێنە. تکایە پێش "
+"شێوازی تایبەتی Crossref  بۆ پێدانی پێشوەختەی DOI بەکار بهێنە. تکایە پێش "
 "بڵاوکردنەوە ئەمە بسڕەوە."
 
 msgid "plugins.importexport.crossref.settings.form.automaticRegistration.description"
 msgstr ""
-"سیستەمی گۆڤاری کراوە ئۆتۆماتیکی DOI بۆ CrossRef دادەنێت. ئەمە لەوانەیە "
+"سیستەمی گۆڤاری کراوە ئۆتۆماتیکی DOI بۆ Crossref دادەنێت. ئەمە لەوانەیە "
 "هەندێک کاتی پێویست ببێت. تۆ دەتوانیت وردبینی لە ناسێنەرە تۆمارنەکراوەکانی "
 "سەرچاوە دیجیتاڵییەکاندا بکەیت."
 
 msgid "plugins.importexport.crossref.registrationIntro"
 msgstr ""
-"ئەگەر تۆ دەتەوێت ناسێنەری سەرچاوە دیجیتاڵییەکان DOI و CrossRef  بەیەکەوە گرێ "
+"ئەگەر تۆ دەتەوێت ناسێنەری سەرچاوە دیجیتاڵییەکان DOI و Crossref  بەیەکەوە گرێ "
 "بدەیت، پێویستت بە ئەژماری کەسی و ژمارەی نهێنییەکەی دەبێت کە لێرە بەردەستە (<"
-"a href=\"http://www.crossref.org\" target=\"_blank\">CrossRef</a>) ئەگەر "
-"ئەژماری کەسیشت نییە دەتوانیت لە ڕێکخستنی  CrossRef XML هەناردەی بکەیت، بەڵام "
-"ناتوانیت DOIیەکەت  لەگەڵ CrossRef  تۆمار بکەیت لە سیستەمی گۆڤاری کراوەدا."
+"a href=\"http://www.crossref.org\" target=\"_blank\">Crossref</a>) ئەگەر "
+"ئەژماری کەسیشت نییە دەتوانیت لە ڕێکخستنی  Crossref XML هەناردەی بکەیت، بەڵام "
+"ناتوانیت DOIیەکەت  لەگەڵ Crossref  تۆمار بکەیت لە سیستەمی گۆڤاری کراوەدا."
