--- a/locale/mk_MK/locale.po
+++ b/locale/mk_MK/locale.po
@@ -13,18 +13,18 @@ msgstr ""
 
 msgid "plugins.importexport.crossref.settings.form.testMode.description"
 msgstr ""
-"Користете го CrossRef API за тестирање (околина за тестирање) за DOI "
+"Користете го Crossref API за тестирање (околина за тестирање) за DOI "
 "депозитот. Ве молиме не заборавајте да ја извадите оваа опција за продукција."
 
 msgid "plugins.importexport.crossref.settings.form.automaticRegistration.description"
 msgstr ""
-"OJS автоматски ќе ги депонира назначените DOIs во CrossRef. Ве молиме имајте "
+"OJS автоматски ќе ги депонира назначените DOIs во Crossref. Ве молиме имајте "
 "во предвид дека ќе биде потребно малку време после објавување ова да се "
 "процесира (пр. зависно од вашата cronjob конфигурација). Можете да ги "
 "проверите сите нерегистрирани DOIs."
 
 msgid "plugins.importexport.crossref.settings.form.usernameRequired"
-msgstr "Ве молиме да го внесете корисничкото име кое го добивте од CrossRef."
+msgstr "Ве молиме да го внесете корисничкото име кое го добивте од Crossref."
 
 msgid "plugins.importexport.crossref.settings.form.username"
 msgstr "Корисничко име"
@@ -32,11 +32,11 @@ msgstr "Корисничко име"
 msgid "plugins.importexport.crossref.registrationIntro"
 msgstr ""
 "Доколку сакате да го користите овој плагин за регистрација на Digital Object "
-"Identifiers (DOIs) директно со CrossRef, ќе ви бидат потрбни корисничко име "
+"Identifiers (DOIs) директно со Crossref, ќе ви бидат потрбни корисничко име "
 "и лозинка (достапни од <a href=\"http://www.crossref.org\" target=\"_blank\""
-">CrossRef</a>) за да го направите тоа. Доколку немате ваши корисничко име и "
-"лозинка, се уште можете да експортирате во CrossRef XML fформат, но не "
-"можете да ги регистрирате вашите DOIs со CrossRef од OJS."
+">Crossref</a>) за да го направите тоа. Доколку немате ваши корисничко име и "
+"лозинка, се уште можете да експортирате во Crossref XML fформат, но не "
+"можете да ги регистрирате вашите DOIs со Crossref од OJS."
 
 msgid "plugins.importexport.crossref.settings.form.depositorEmailRequired"
 msgstr "Ве молиме да го внесете и-меилот на депонентот."
@@ -51,7 +51,7 @@ msgid "plugins.importexport.crossref.settings.form.depositorName"
 msgstr "Име на депонент"
 
 msgid "plugins.importexport.crossref.settings.depositorIntro"
-msgstr "Следните елементи се задолжителни за успешен CrossRef депозит."
+msgstr "Следните елементи се задолжителни за успешен Crossref депозит."
 
 msgid "plugins.importexport.crossref.error.issnNotConfigured"
 msgstr ""
@@ -72,10 +72,10 @@ msgid "plugins.importexport.crossref.requirements"
 msgstr "Побарувања"
 
 msgid "plugins.importexport.crossref.description"
-msgstr "Експортирај ги метаподатоците на трудот во CrossRef XML формат."
+msgstr "Експортирај ги метаподатоците на трудот во Crossref XML формат."
 
 msgid "plugins.importexport.crossref.displayName"
-msgstr "Плагин за експортирање на CrossRef XML"
+msgstr "Плагин за експортирање на Crossref XML"
 
 msgid "plugins.importexport.crossref.error.noDOIContentObjects"
 msgstr ""
@@ -107,7 +107,7 @@ msgstr ""
 "[objectId2] ...\n"
 
 msgid "plugins.importexport.crossref.senderTask.name"
-msgstr "Автоматска постапка за регистрација во CrossRef"
+msgstr "Автоматска постапка за регистрација во Crossref"
 
 msgid "plugins.importexport.crossref.action.markRegistered"
 msgstr "Означи активно"
