--- a/locale/sl_SI/locale.po
+++ b/locale/sl_SI/locale.po
@@ -16,10 +16,10 @@ msgstr ""
 "X-Generator: Weblate 3.9.1\n"
 
 msgid "plugins.importexport.crossref.displayName"
-msgstr "Vtičnik za CrossRef XML izvoz"
+msgstr "Vtičnik za Crossref XML izvoz"
 
 msgid "plugins.importexport.crossref.description"
-msgstr "Izvozi metapodatke prispevka v CrossRef XML obliki."
+msgstr "Izvozi metapodatke prispevka v Crossref XML obliki."
 
 msgid "plugins.importexport.crossref.requirements"
 msgstr "Zahteve"
@@ -37,7 +37,7 @@ msgid "plugins.importexport.crossref.error.noDOIContentObjects"
 msgstr "Prispevki niso izbrani za dodeljevanje DOI-jev v vtičniku za DOI javni identifikator in zato ni možnosti depozita ali izvoza podatkov v tem vtičniku."
 
 msgid "plugins.importexport.crossref.settings.depositorIntro"
-msgstr "Spodnej postavke so obvezne za uspešen CrossRef depozit."
+msgstr "Spodnej postavke so obvezne za uspešen Crossref depozit."
 
 msgid "plugins.importexport.crossref.settings.form.depositorName"
 msgstr "Ime depozitorja"
@@ -52,19 +52,19 @@ msgid "plugins.importexport.crossref.settings.form.depositorEmailRequired"
 msgstr "Prosimo vnestie email depozitorja."
 
 msgid "plugins.importexport.crossref.registrationIntro"
-msgstr "Če želite uporabiti ta vtičnik za registracijo DOI-jev direktno pri CrossRef, boste potrebovali uporabniško ime in geslo (na voljo na <a href=\"http://www.crossref.org\" target=\"_blank\">CrossRef</a>). Če nimate svojega uporabniškega imena in gesla, lahko še vedno izvozite podatke v CrossRef XML obliki, ampak ne morete registrirati DOI-jev pri CrossRef direktno iz OJS."
+msgstr "Če želite uporabiti ta vtičnik za registracijo DOI-jev direktno pri Crossref, boste potrebovali uporabniško ime in geslo (na voljo na <a href=\"http://www.crossref.org\" target=\"_blank\">Crossref</a>). Če nimate svojega uporabniškega imena in gesla, lahko še vedno izvozite podatke v Crossref XML obliki, ampak ne morete registrirati DOI-jev pri Crossref direktno iz OJS."
 
 msgid "plugins.importexport.crossref.settings.form.username"
 msgstr "Uporabniško ime"
 
 msgid "plugins.importexport.crossref.settings.form.usernameRequired"
-msgstr "Prosimo vnesite uporabniško ime, ki ste ga dobili pri CrossRef."
+msgstr "Prosimo vnesite uporabniško ime, ki ste ga dobili pri Crossref."
 
 msgid "plugins.importexport.crossref.settings.form.automaticRegistration.description"
-msgstr "OJS bo avtomatsko opravil depozit dodeljenih DOI-jev na CrossRef. Prosimo upoštevajte, da je za to lahko potrebno nekaj časa po tistem, ko objavite novo številko. Lahko preverite vse neregistrirane DOI-je."
+msgstr "OJS bo avtomatsko opravil depozit dodeljenih DOI-jev na Crossref. Prosimo upoštevajte, da je za to lahko potrebno nekaj časa po tistem, ko objavite novo številko. Lahko preverite vse neregistrirane DOI-je."
 
 msgid "plugins.importexport.crossref.settings.form.testMode.description"
-msgstr "Uporabi CrossRef test API (testno okolje) za depozit DOI-jev. Ne pozabite odstraniti te možnosti za produkcijo!"
+msgstr "Uporabi Crossref test API (testno okolje) za depozit DOI-jev. Ne pozabite odstraniti te možnosti za produkcijo!"
 
 msgid "plugins.importexport.crossref.issues.description"
 msgstr "Opozorilo: Samo številke (in ne vsebovani prispevki) bodo upoštevane za izvoz/depozit."
@@ -104,7 +104,7 @@ msgid "plugins.importexport.crossref.action.register"
 msgstr "Oddaj"
 
 msgid "plugins.importexport.crossref.senderTask.name"
-msgstr "Opravilo avtomatske registracije pri CrossRef"
+msgstr "Opravilo avtomatske registracije pri Crossref"
 
 msgid "plugins.importexport.crossref.cliUsage"
 msgstr ""
