--- a/locale/sv_SE/locale.po
+++ b/locale/sv_SE/locale.po
@@ -15,10 +15,10 @@ msgstr ""
 "X-Generator: Weblate 3.9.1\n"
 
 msgid "plugins.importexport.crossref.displayName"
-msgstr "Plugin för export av CrossRef-XML"
+msgstr "Plugin för export av Crossref-XML"
 
 msgid "plugins.importexport.crossref.description"
-msgstr "Exporterar artikelmetadata i CrossRefs XML-format."
+msgstr "Exporterar artikelmetadata i Crossrefs XML-format."
 
 msgid "plugins.importexport.crossref.requirements"
 msgstr "Krav"
@@ -36,7 +36,7 @@ msgid "plugins.importexport.crossref.error.noDOIContentObjects"
 msgstr "Inga artiklar har valts för tilldelning av DOI i DOI-pluginet, därför är det inte möjligt att deponera eller exportera via pluginet."
 
 msgid "plugins.importexport.crossref.settings.depositorIntro"
-msgstr "Följande objekt krävs för att deponeringen till CrossRef ska fungera."
+msgstr "Följande objekt krävs för att deponeringen till Crossref ska fungera."
 
 msgid "plugins.importexport.crossref.settings.form.depositorName"
 msgstr "Deponerarens namn"
@@ -51,19 +51,19 @@ msgid "plugins.importexport.crossref.settings.form.depositorEmailRequired"
 msgstr "Ange deponerarens e-post."
 
 msgid "plugins.importexport.crossref.registrationIntro"
-msgstr "Om du vill använda det här pluginet för att registrera Digital Object Identifiers (DOIs) direkt hos CrossRef behöver du användarnamn och lösenord (finns att få på <a href=\"http://www.crossref.org\" target=\"_blank\">CrossRef</a>). Om du inte har ett eget användarnamn och lösenord kan du ändå exportera i XML format, men du kan inte registrera dina DOI:er hos CrossRef via OJS."
+msgstr "Om du vill använda det här pluginet för att registrera Digital Object Identifiers (DOIs) direkt hos Crossref behöver du användarnamn och lösenord (finns att få på <a href=\"http://www.crossref.org\" target=\"_blank\">Crossref</a>). Om du inte har ett eget användarnamn och lösenord kan du ändå exportera i XML format, men du kan inte registrera dina DOI:er hos Crossref via OJS."
 
 msgid "plugins.importexport.crossref.settings.form.username"
 msgstr "Användarnamn"
 
 msgid "plugins.importexport.crossref.settings.form.usernameRequired"
-msgstr "Logga in med ditt användarnamn från från CrossRef."
+msgstr "Logga in med ditt användarnamn från från Crossref."
 
 msgid "plugins.importexport.crossref.settings.form.automaticRegistration.description"
-msgstr "OJS deponerar automatiskt tilldelade DOI:er till CrossRef. Det kan ta ett kort tag efter publiceringen innan deponeringen behandlas. Du kan kontrollera alla oregistrerade DOI:er."
+msgstr "OJS deponerar automatiskt tilldelade DOI:er till Crossref. Det kan ta ett kort tag efter publiceringen innan deponeringen behandlas. Du kan kontrollera alla oregistrerade DOI:er."
 
 msgid "plugins.importexport.crossref.settings.form.testMode.description"
-msgstr "Använd CrossRefs test-API (testmiljö) för DOI-deponering. Kom ihåg att ta bort alternativet när tidskriften går i produktion."
+msgstr "Använd Crossrefs test-API (testmiljö) för DOI-deponering. Kom ihåg att ta bort alternativet när tidskriften går i produktion."
 
 msgid "plugins.importexport.crossref.issues.description"
 msgstr "Observera: Bara nummer (inte deras artiklar) kommer att exporteras/registreras här."
@@ -98,7 +98,7 @@ msgid "plugins.importexport.crossref.action.markRegistered"
 msgstr "Markera som aktiv"
 
 msgid "plugins.importexport.crossref.senderTask.name"
-msgstr "CrossRefs automatiska registreringsfunktion"
+msgstr "Crossrefs automatiska registreringsfunktion"
 
 msgid "plugins.importexport.crossref.cliUsage"
 msgstr ""
