--- a/locale/tr_TR/locale.po
+++ b/locale/tr_TR/locale.po
@@ -15,10 +15,10 @@ msgstr ""
 "X-Generator: Weblate 3.9.1\n"
 
 msgid "plugins.importexport.crossref.displayName"
-msgstr "CrossRef  XML Aktarım Eklentisi"
+msgstr "Crossref  XML Aktarım Eklentisi"
 
 msgid "plugins.importexport.crossref.description"
-msgstr "Makale üst verilerini CrossRef XML formatında dışa aktar."
+msgstr "Makale üst verilerini Crossref XML formatında dışa aktar."
 
 msgid "plugins.importexport.crossref.requirements"
 msgstr "Gereksinimler"
@@ -27,7 +27,7 @@ msgid "plugins.importexport.crossref.requirements.satisfied"
 msgstr "Tüm eklenti gereksinimleri karşılanıyor."
 
 msgid "plugins.importexport.crossref.settings.depositorIntro"
-msgstr "Başarılı bir CrossRef arşivlemesi için aşağıdakiler gereklidir."
+msgstr "Başarılı bir Crossref arşivlemesi için aşağıdakiler gereklidir."
 
 msgid "plugins.importexport.crossref.settings.form.depositorName"
 msgstr "Arşivleyenin adı"
@@ -45,7 +45,7 @@ msgid "plugins.importexport.crossref.settings.form.username"
 msgstr "Kullanıcı adı"
 
 msgid "plugins.importexport.crossref.settings.form.usernameRequired"
-msgstr "CrossRef'ten almış olduğunuz kullanıcı adını giriniz."
+msgstr "Crossref'ten almış olduğunuz kullanıcı adını giriniz."
 
 msgid "plugins.importexport.crossref.error.publisherNotConfigured"
 msgstr ""
@@ -64,23 +64,23 @@ msgstr ""
 
 msgid "plugins.importexport.crossref.registrationIntro"
 msgstr ""
-"Bu eklentiyi, Dijital Nesne Tanımlayıcılarını (DOI'ler) doğrudan CrossRef'e "
+"Bu eklentiyi, Dijital Nesne Tanımlayıcılarını (DOI'ler) doğrudan Crossref'e "
 "kaydetmek için kullanmak istemeniz halinde kullanıcı adı ve şifreye (<a href="
-"\"http://www.crossref.org\" target=\"_blank\">CrossRef</a> 'den ulaşılabilir)"
+"\"http://www.crossref.org\" target=\"_blank\">Crossref</a> 'den ulaşılabilir)"
 " ihtiyacınız olacaktır. Eğer kullanıcı adı ve şifreniz yoksa, yine de "
-"CrossRef XML biçimi ile dışa aktarma yapabilirsiniz, ancak DOI'lerinizi "
-"CrossRef'e OJS içinden kaydedemezsiniz."
+"Crossref XML biçimi ile dışa aktarma yapabilirsiniz, ancak DOI'lerinizi "
+"Crossref'e OJS içinden kaydedemezsiniz."
 
 msgid "plugins.importexport.crossref.settings.form.automaticRegistration.description"
 msgstr ""
-"OJS atanmış DOI'leri otomatik olarak CrossRef'e kaydedecek. Lütfen bu "
+"OJS atanmış DOI'leri otomatik olarak Crossref'e kaydedecek. Lütfen bu "
 "işlemin yayınlanma işleminden sonra kısa bir zaman alabileceğini unutmayın ("
 "Ör. zamanlanmış işler yapılandırmanıza bağlı olarak). Kaydedilmemiş tüm "
 "DOI'leri kontrol edebilirsiniz."
 
 msgid "plugins.importexport.crossref.settings.form.testMode.description"
 msgstr ""
-"DOI arşivlemesi için CrossRef test API'sini (test ortamı) kullanın. Lütfen "
+"DOI arşivlemesi için Crossref test API'sini (test ortamı) kullanın. Lütfen "
 "yayın için bu seçeneği kaldırmayı unutmayın."
 
 msgid "plugins.importexport.crossref.issues.description"
@@ -134,10 +134,10 @@ msgid "plugins.importexport.crossref.action.checkStatus"
 msgstr "Durumu kontrol et"
 
 msgid "plugins.importexport.crossref.senderTask.name"
-msgstr "CrossRef otomatik kayıt görevi"
+msgstr "Crossref otomatik kayıt görevi"
 
 msgid "plugins.importexport.crossref.notification.failed"
-msgstr "DOI kaydı başarısız oldu. Başarısız olanları görmek için lütfen \"Araçlar > İçe Aktar / Dışa Aktar > CrossRef XML İhraç Eklentisi\" bölümüne gidin."
+msgstr "DOI kaydı başarısız oldu. Başarısız olanları görmek için lütfen \"Araçlar > İçe Aktar / Dışa Aktar > Crossref XML İhraç Eklentisi\" bölümüne gidin."
 
 msgid "plugins.importexport.crossref.cliUsage"
 msgstr ""
