--- a/locale/uk_UA/locale.po
+++ b/locale/uk_UA/locale.po
@@ -16,10 +16,10 @@ msgstr ""
 "X-Generator: Weblate 3.9.1\n"
 
 msgid "plugins.importexport.crossref.displayName"
-msgstr "Модуль експорту у CrossRef XML"
+msgstr "Модуль експорту у Crossref XML"
 
 msgid "plugins.importexport.crossref.description"
-msgstr "Експорт метаданих статті у формат CrossRef XML."
+msgstr "Експорт метаданих статті у формат Crossref XML."
 
 msgid "plugins.importexport.crossref.requirements"
 msgstr "Вимоги"
@@ -37,7 +37,7 @@ msgid "plugins.importexport.crossref.error.noDOIContentObjects"
 msgstr "Не вибрано статті для присвоєння DOI в модулі відкритих ідентифікаторів DOI, тому немає можливості подання у депозитарій або експортування у цьому модулі."
 
 msgid "plugins.importexport.crossref.settings.depositorIntro"
-msgstr "Для успішного подання в депозитарій CrossRef потрібна така інформація."
+msgstr "Для успішного подання в депозитарій Crossref потрібна така інформація."
 
 msgid "plugins.importexport.crossref.settings.form.depositorName"
 msgstr "Ім'я депонента"
@@ -52,19 +52,19 @@ msgid "plugins.importexport.crossref.settings.form.depositorEmailRequired"
 msgstr "Будь ласка, введіть електронну адресу депонента."
 
 msgid "plugins.importexport.crossref.registrationIntro"
-msgstr "Якщо ви хочете використовувати цей модуль для реєстрації ідентифікаторів цифрових об'єктів (DOI) безпосередньо в CrossRef, вам знадобиться ім'я користувача та пароль (можна отримати на <a href=\"http://www.crossref.org\" target=\"_blank\">CrossRef</a>). Якщо у вас немає власного імені користувача та пароля, ви все одно зможете експортувати в CrossRef XML, але ви не можете зареєструвати свої DOI в CrossRef з OJS."
+msgstr "Якщо ви хочете використовувати цей модуль для реєстрації ідентифікаторів цифрових об'єктів (DOI) безпосередньо в Crossref, вам знадобиться ім'я користувача та пароль (можна отримати на <a href=\"http://www.crossref.org\" target=\"_blank\">Crossref</a>). Якщо у вас немає власного імені користувача та пароля, ви все одно зможете експортувати в Crossref XML, але ви не можете зареєструвати свої DOI в Crossref з OJS."
 
 msgid "plugins.importexport.crossref.settings.form.username"
 msgstr "Ім'я користувача"
 
 msgid "plugins.importexport.crossref.settings.form.usernameRequired"
-msgstr "Будь ласка, введіть ім'я користувача, яке ви отримали від CrossRef."
+msgstr "Будь ласка, введіть ім'я користувача, яке ви отримали від Crossref."
 
 msgid "plugins.importexport.crossref.settings.form.automaticRegistration.description"
-msgstr "OJS буде автоматично депонувати призначені DOI на CrossRef. Зверніть увагу, що після публікації обробка може зайняти деякий час (наприклад, залежно від налаштувань вашого cron). Ви можете перевірити всі незареєстровані DOI."
+msgstr "OJS буде автоматично депонувати призначені DOI на Crossref. Зверніть увагу, що після публікації обробка може зайняти деякий час (наприклад, залежно від налаштувань вашого cron). Ви можете перевірити всі незареєстровані DOI."
 
 msgid "plugins.importexport.crossref.settings.form.testMode.description"
-msgstr "Використовувати тестовий API CrossRef (середовище тестування) для депонування DOI. Будь ласка, не забудьте прибрати цей параметр для подальшої роботи."
+msgstr "Використовувати тестовий API Crossref (середовище тестування) для депонування DOI. Будь ласка, не забудьте прибрати цей параметр для подальшої роботи."
 
 msgid "plugins.importexport.crossref.issues.description"
 msgstr "Примітка: Для експорту/реєстрації тут розглядатимуться лише випуски (а не статті з них)."
@@ -112,10 +112,10 @@ msgid "plugins.importexport.crossref.action.checkStatus"
 msgstr "Перевірити статус"
 
 msgid "plugins.importexport.crossref.senderTask.name"
-msgstr "Завдання автоматичної реєстрації CrossRef"
+msgstr "Завдання автоматичної реєстрації Crossref"
 
 msgid "plugins.importexport.crossref.notification.failed"
-msgstr "Не вдалося зареєструвати DOI. Будь ласка, перейдіть в Інструменти > Імпорт/Експорт > Модуль експорту у CrossRef XML щоб переглянути невдалі депонування."
+msgstr "Не вдалося зареєструвати DOI. Будь ласка, перейдіть в Інструменти > Імпорт/Експорт > Модуль експорту у Crossref XML щоб переглянути невдалі депонування."
 
 msgid "plugins.importexport.crossref.cliUsage"
 msgstr ""
